5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1602_2895.log
== TEST (2019-03-20 19:15:55) 
-- CODE:
input("quantidade de jogos")

input("valor unitario")

input("valor do frete")
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:10) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(jogos*valor+frete)
-- ERROR:
File "XXXX", line 7
    print(jogos*valor+frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:28) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print("jogos"*"valor"+"frete")
-- ERROR:
File "XXXX", line 7
    print("jogos"*"valor"+"frete")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:46) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(5*100+50)
-- ERROR:
File "XXXX", line 7
    print(5*100+50)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:30:49) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(5*100+50)
-- EXECUTION TIME:
0.139595
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 7
    print(5*100+50)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:51) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(5*100+50)
-- ERROR:
File "XXXX", line 7
    print(5*100+50)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:32:01) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(5*100+50)
-- ERROR:
File "XXXX", line 7
    print(5*100+50)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:33:47) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print((jogos*valor)+frete)
-- ERROR:
File "XXXX", line 7
    print((jogos*valor)+frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:36) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print((jogos*valor)+frete)
-- ERROR:
File "XXXX", line 7
    print((jogos*valor)+frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:59) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(float((jogos*valor)+frete))
-- ERROR:
File "XXXX", line 7
    print(float((jogos*valor)+frete))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:54) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(100)
				
print(int((jogos*valor)+frete))
-- ERROR:
File "XXXX", line 7
    print(int((jogos*valor)+frete))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:16:56) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40)
				
print(float((jogos*valor)+frete))
-- ERROR:
File "XXXX", line 7
    print(float((jogos*valor)+frete))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:28) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:32) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- EXECUTION TIME:
0.160548
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
510040618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
510040765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
510040240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:44) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:52) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- EXECUTION TIME:
0.145983
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
510040618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
510040765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
510040240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:08) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:10) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- EXECUTION TIME:
0.154312
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
510040618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
510040765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
510040240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:23) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:29) 
-- CODE:
jogos=int(input(5))

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:41) 
-- CODE:
jogos=int(input())

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- OUTPUT:
10040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:58) 
-- CODE:
jogos=int(input())

valor=float(input(100))

frete=float(input(40))
				
print(float((jogos*valor)+frete))
-- EXECUTION TIME:
0.148241
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
10040618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10040765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
10040240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:19) 
-- CODE:
jogos=int(input())

valor=float(input())

frete=float(input())
				
print(float((jogos*valor)+frete))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:47) 
-- CODE:
jogos=int(input())

valor=float(input())

frete=float(input())
				
print(float((jogos*valor)+frete))
-- EXECUTION TIME:
0.129017
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
